--- a/templates/default.html
+++ b/templates/default.html
@@ -6,11 +6,12 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <title>My Hakyll Blog - $title$</title>
         <link rel="stylesheet" type="text/css" href="/css/default.css" />
+        <link rel="stylesheet" type="text/css" href="/css/syntax.css" />
     </head>
     <body>
         <div id="header">
             <div id="logo">
-                <a href="/">My Hakyll Blog</a>
+                <a href="/">주형 블로그</a>
             </div>
             <div id="navigation">
                 <a href="/">Home</a>
