--- a/templates/default.html
+++ b/templates/default.html
@@ -5,6 +5,14 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="하스켈과 게임개발을 다루는 블로그">
+
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="주형 블로그">
+        <meta property="og:image" content="https://blog.majecty.com/profile.jpg">
+        <meta property="og:description" content="하스켈과 게임 개발을 다루는 블로그">
+        <meta property="og:url" content="https://blog.majecty.com">
+
         <title>주형 Blog - $title$</title>
         <link rel="stylesheet" type="text/css" href="/css/default.css" />
         <link rel="stylesheet" type="text/css" href="/css/syntax.css" />
