Make description simple

--- a/templates/default.html
+++ b/templates/default.html
@@ -8,13 +8,13 @@
         $if(description)$
         <meta name="description" content="$description$">
         $else$
-        <meta name="description" content="하스켈과 게임개발을 다루는 블로그">
+        <meta name="description" content="하스켈과 게임개발">
         $endif$
 
         <meta property="og:type" content="website">
         <meta property="og:title" content="주형 블로그">
         <meta property="og:image" content="https://blog.majecty.com/profile.jpg">
-        <meta property="og:description" content="하스켈과 게임 개발을 다루는 블로그">
+        <meta property="og:description" content="하스켈과 게임 개발">
         <meta property="og:url" content="https://blog.majecty.com">
 
         <title>주형 Blog - $title$</title>
