--- a/templates/default.html
+++ b/templates/default.html
@@ -14,7 +14,11 @@
         <meta property="og:type" content="website">
         <meta property="og:title" content="주형 블로그">
         <meta property="og:image" content="https://blog.majecty.com/profile.jpg">
+        $if(description)$
+        <meta property="og:description" content="$description$">
+        $else$
         <meta property="og:description" content="하스켈과 게임 개발">
+        $endif$
         <meta property="og:url" content="https://blog.majecty.com">
 
         <title>주형 Blog - $title$</title>
