Add link to rss in all page

--- a/templates/default.html
+++ b/templates/default.html
@@ -24,6 +24,7 @@
         <title>주형 Blog - $title$</title>
         <link rel="stylesheet" type="text/css" href="/css/default.css" />
         <link rel="stylesheet" type="text/css" href="/css/syntax.css" />
+        <link rel="home" type="application/rss+xml" href="https://blog.majecty.com/atom.xml" />
     </head>
     <body>
         <div style="margin:5px;">
