--- a/templates/default.html
+++ b/templates/default.html
@@ -44,6 +44,7 @@
                     $endif$
                     <a href="/contact.html">Contact</a>
                     <a href="/archive.html">Archive</a>
+                    <a href="/search.html">Search</a>
                 </div>
             </div>
 
