Use https for naver script

--- a/templates/default.html
+++ b/templates/default.html
@@ -61,7 +61,7 @@ ga('send', 'pageview');
                 <a href="http://jaspervdj.be/hakyll">Hakyll</a>
             </div>
         </div>
-        <script type="text/javascript" src="http://wcs.naver.net/wcslog.js"></script>
+        <script type="text/javascript" src="https://wcs.naver.net/wcslog.js"></script>
         <script type="text/javascript">
         if(!wcs_add) var wcs_add = {};
         wcs_add["wa"] = "1204a977388eb38";
