Add english link to header

--- a/templates/default.html
+++ b/templates/default.html
@@ -48,6 +48,7 @@ ga('send', 'pageview');
                     <a href="/contact.html">Contact</a>
                     <a href="/archive.html">Archive</a>
                     <a href="/search.html">Search</a>
+                    <a href="/enblog/">English</a>
                 </div>
             </div>
 
