--- a/templates/default.html
+++ b/templates/default.html
@@ -11,6 +11,11 @@
         <meta property="og:image" content="https://blog.majecty.com/profile.jpg">
         <meta property="og:url" content="https://blog.majecty.com">
 
+        <link rel="icon" type="image/png" href="/favicon_16.png" sizes="16x16">
+        <link rel="icon" type="image/png" href="/favicon_32.png" sizes="32x32">
+        <link rel="icon" type="image/png" href="/favicon_96.png" sizes="96x96">
+        <link rel="icon" type="image/png" href="/favicon_310.png" sizes="310x310">
+
         <title>주형 Blog - $title$</title>
         <link rel="stylesheet" type="text/css" href="/css/default.css" />
         <link rel="stylesheet" type="text/css" href="/css/syntax.css" />
