Change header of site

--- a/templates/default.html
+++ b/templates/default.html
@@ -51,9 +51,9 @@ ga('send', 'pageview');
                     <a href="/">Home</a>
                     $endif$
                     <a href="/contact.html">Contact</a>
-                    <a href="/archive.html">Archive</a>
                     <a href="/search.html">Search</a>
                     <a href="/enblog/">English</a>
+                    <a href="/wikis.html">Wiki</a>
                 </div>
             </div>
 
