--- a/templates/default.html
+++ b/templates/default.html
@@ -21,7 +21,7 @@
         <link rel="stylesheet" type="text/css" href="/css/syntax.css" />
         <link rel="home" type="application/rss+xml" href="https://blog.majecty.com/atom.xml" />
 
-
+        <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
         <script>
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
