--- a/templates/default.html
+++ b/templates/default.html
@@ -21,6 +21,10 @@
         <link rel="stylesheet" type="text/css" href="/css/syntax.css" />
         <link rel="home" type="application/rss+xml" href="https://blog.majecty.com/atom.xml" />
 
+        <link href="//cdn.muicss.com/mui-0.9.41/css/mui.min.css" rel="stylesheet" type="text/css" />
+        <script src="//cdn.muicss.com/mui-0.9.41/js/mui.min.js"></script>
+
+        <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
         <script>
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -34,7 +38,7 @@ ga('send', 'pageview');
         </script>
 
     </head>
-    <body>
+    <body class="mui-container">
         <div style="margin:5px;">
             <div id="header">
                 <div id="logo">
