--- a/css/default.css
+++ b/css/default.css
@@ -7,6 +7,10 @@ body {
     font-family: 'Nanum Gothic', sans-serif;
 }
 
+body.mui-container {
+    max-width: 800px;
+}
+
 div#header {
     border-bottom: 2px solid black;
     margin-bottom: 30px;
