Change og image

--- a/templates/default.html
+++ b/templates/default.html
@@ -8,7 +8,7 @@
 
         <meta property="og:type" content="website">
         <meta property="og:title" content="주형 블로그">
-        <meta property="og:image" content="https://blog.majecty.com/profile.jpg">
+        <meta property="og:image" content="https://blog.majecty.com/favicon_310.png">
         <meta property="og:url" content="https://blog.majecty.com">
 
         <link rel="icon" type="image/png" href="/favicon_16.png" sizes="16x16">
