--- a/templates/post.html
+++ b/templates/post.html
@@ -12,3 +12,11 @@
 </div>
 
 $body$
+
+<script src="https://utteranc.es/client.js"
+        repo="majecty/blog-comments"
+        issue-term="pathname"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script>
