Change og title

--- a/templates/default.html
+++ b/templates/default.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <meta property="og:type" content="website">
-        <meta property="og:title" content="주형 블로그">
+        <meta property="og:title" content="주형 Blog - $title$">
         <meta property="og:image" content="https://blog.majecty.com/favicon_310.png">
         <meta property="og:url" content="https://blog.majecty.com">
 
