post 화면에서 메타데이터 한글로 표현

--- a/templates/post.html
+++ b/templates/post.html
@@ -1,13 +1,13 @@
 <div class="info">
-    Posted on $date$
-    $if(author)$
-        by $author$
-    $endif$
+    <!-- $if(author)$
+        $author$이
+    $endif$ -->
+    $date$에 씀
 </div>
 
 <div class="info">
     $if(tags)$
-    Tags: $tags$
+    찾아보기: $tags$
     $endif$
 </div>
 
